data/derived/fa15/progs/unify/prog1956.ml.out
Characters 223-224:
  let args = List.combine (List.rev 0::l1) (List.rev 0::l2) in
                                    ^
Error: This expression has type int but an expression was expected of type
         'a list
